# fw13-auto-brightness

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demon/: CMakeLists.txt  aib.conf
demon/installer/: i.sh
demon/src/: main.cpp
demon/src/cpp/: Config.cpp  LoadConfig.cpp
demon/src/h/: Config.h  LoadConfig.h  vec2_u16.h
installer/: AutoBrightnessUI  aib.conf  d.desktop  e.service  i.sh
readme/: README_RU.md
src/: main.cpp
ui/: CMakeLists.txt
ui/src/: main.cpp
ui/src/dbus/: DbusClient.cpp  DbusClient.h
ui/src/h/: Config.h  vec2_u16.h
ui/src/validators/: IntValidator.h
ui/src/view/: MainView.cpp  MainView.h
